--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nestjs/vitemail",
+  "name": "vitemail",
   "version": "1.0.0",
   "description": "A library to simplify the logic of sending emails",
   "main": "dist/index.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^9.4.0",
+    "dist": "^0.1.2",
     "nodemailer": "^6.9.1",
     "rxjs": "^7.8.0"
   },
