--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vitemail",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A library to simplify the logic of sending emails",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "npm run start:vitemo",
     "prepublish": "npm run build",
     "build": "rimraf dist && tsc"
   },
@@ -15,6 +17,7 @@
     "@nestjs/common": "^9.4.0",
     "dist": "^0.1.2",
     "nodemailer": "^6.9.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
